--- a/src/app/nurses-manage-dashboard/nurses-manage-dashboard.component.html
+++ b/src/app/nurses-manage-dashboard/nurses-manage-dashboard.component.html
@@ -164,12 +164,13 @@
                 class="btn btn-primary btn-raised" (click)="openReportDialog('administrative')">
                 <i class="material-icons">assignment_ind</i>
             </button>
-            <button  matTooltipPosition="left" matTooltip="לדיווח תקלה במערכת" id="EventBtndisplay" mat-raised-button type="submit"
-                class="btn btn-raised mr-1" style="background-color: grey;" (click)="bugReport()">
+            <button matTooltipPosition="left" matTooltip="לדיווח תקלה במערכת" id="EventBtndisplay" mat-raised-button
+                type="submit" class="btn btn-raised mr-1" style="background-color: grey;" (click)="bugReport()">
                 <i class="material-icons">info</i>
             </button>
-            <div style="margin-right: 33%;margin-top: 18px;"> נתונים מעודכנים ל: {{ updateDate | date: "dd.MM.yyyy"}} - {{ updateDate | date: "HH:mm"}}</div>
-            
+            <div style="margin-right: 33%;margin-top: 18px;"> נתונים מעודכנים ל: {{ updateDate | date: "dd.MM.yyyy"}} -
+                {{ updateDate | date: "HH:mm"}}</div>
+
             <!-- <button matTooltip="החלפה לאחות מחלקה" id="EventBtndisplay" *ngIf="UserName == 'jubartal'" mat-raised-button
                 type="submit" class="btn btn-raised" (click)="test()">
                 <i class="material-icons">face</i>
@@ -182,9 +183,11 @@
     <div class="survey-options">
         <div class="poll-options">
             <div class="row" style="margin-bottom: 10px;">
-                <div class="col-4" *ngFor="let item of all_departments_array" style="margin-bottom: 5px;height: 75px;cursor: pointer;">
-                    <mat-card *ngIf="item.Dept_Name && item.OccupancyPerDepart != '0'" (click)="openDialogToFill(item.Dept_Number,item.Dept_Name,'1')"
-                        style="height: 100%;" class="card dash-cards m-2 p-2 text-center">
+                <div class="col-4" *ngFor="let item of all_departments_array"
+                    style="margin-bottom: 5px;height: 75px;cursor: pointer;">
+                    <mat-card *ngIf="item.Dept_Name && item.OccupancyPerDepart != '0'"
+                        (click)="openDialogToFill(item.Dept_Number,item.Dept_Name,'1')" style="height: 100%;"
+                        class="card dash-cards m-2 p-2 text-center">
                         <div class="list-style text-center" style="font-size: 23px;color: darkblue;"><span
                                 *ngIf="item.Dept_Name == 'מיון יולדות (חדר לידה)'">מיון יולדות</span><span
                                 *ngIf="item.Dept_Name == 'טפול נמרץ פגים ובילוד בחולה'">טיפול נמרץ פגים</span>
@@ -229,35 +232,37 @@
     <div mat-dialog-actions>
         <div class="row">
             <button mat-raised-button color="primary" (click)="submitBugReport()" mat-dialog-close>שליחה</button>
-            <button mat-raised-button color="primary" style="float: right;" (click)="showBugsTablef()">הצג תקלות</button> 
+            <button mat-raised-button color="primary" style="float: right;" (click)="showBugsTablef()">הצג
+                תקלות</button>
         </div>
-        
+
     </div>
     <div class="row mt-5" *ngIf="showBugsTable">
         <table mat-table [dataSource]="bugData" dir="rtl" class="mat-elevation-z8">
             <ng-container matColumnDef="date">
-              <th mat-header-cell *matHeaderCellDef> תאריך התקלה </th>
-              <td mat-cell *matCellDef="let element"> {{element.Bug_Date}} </td>
+                <th mat-header-cell *matHeaderCellDef> תאריך התקלה </th>
+                <td mat-cell *matCellDef="let element"> {{element.Bug_Date}} </td>
             </ng-container>
-          
+
             <ng-container matColumnDef="user">
-              <th mat-header-cell *matHeaderCellDef> שם משתמש </th>
-              <td mat-cell *matCellDef="let element"> {{element.Bug_User}} </td>
+                <th mat-header-cell *matHeaderCellDef> שם משתמש </th>
+                <td mat-cell *matCellDef="let element"> {{element.Bug_User}} </td>
             </ng-container>
-          
+
             <ng-container matColumnDef="subject">
-              <th mat-header-cell *matHeaderCellDef> תוכן התקלה </th>
-              <td mat-cell *matCellDef="let element"> {{element.Bug_Subject}} </td>
+                <th mat-header-cell *matHeaderCellDef> תוכן התקלה </th>
+                <td mat-cell *matCellDef="let element"> {{element.Bug_Subject}} </td>
             </ng-container>
-          
+
             <ng-container matColumnDef="done">
-              <th mat-header-cell *matHeaderCellDef> סטטוס </th>
-              <td mat-cell *matCellDef="let element"> {{element.Bug_Done}} </td>
+                <th mat-header-cell *matHeaderCellDef> סטטוס </th>
+                <td mat-cell *matCellDef="let element"> {{element.Bug_Done}} </td>
             </ng-container>
-          
+
             <tr mat-header-row *matHeaderRowDef="bugColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: bugColumns;" [style.background]="row.Bug_Done == 'טופל' ? 'darkgray': 'aquamarine'"></tr>
-          </table>
+            <tr mat-row *matRowDef="let row; columns: bugColumns;"
+                [style.background]="row.Bug_Done == 'טופל' ? 'darkgray': 'aquamarine'"></tr>
+        </table>
     </div>
 </ng-template>
 
@@ -279,9 +284,9 @@
     <div mat-dialog-actions>
         <div class="row">
             <button mat-raised-button color="primary" (click)="ipAddressUpdate()">עדכון</button>
-            <button mat-raised-button color="warn" style="float: right;" mat-dialog-close>מאוחר יותר</button> 
+            <button mat-raised-button color="warn" style="float: right;" mat-dialog-close>מאוחר יותר</button>
         </div>
-        
+
     </div>
 </ng-template>
 
