--- a/src/app/employees-manage-dash/employees-manage-dash.component.html
+++ b/src/app/employees-manage-dash/employees-manage-dash.component.html
@@ -1,5 +1,7 @@
 <div class="container">
-    <h1 class="page-title text-center">ניהול סטאג'רים</h1>
+    <h1 class="page-title text-center" *ngIf="managerType == 'research'">ניהול עובדי קרן מחקרים</h1>
+    <h1 class="page-title text-center" *ngIf="managerType == 'hr' || managerType == 'admin'">ניהול עובדים</h1>
+    <h1 class="page-title text-center" *ngIf="managerType == 'stager'">ניהול סטאג'רים</h1>
     <div class="container-fluid trans-80 mb-2">
         <div class="row search-cont">
             <div class="col">
@@ -33,7 +35,7 @@
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-4">
+                                <!-- <div class="col-4">
                                     <div class="form-group lh-37">
                                         <mat-form-field>
                                             <mat-label>אלקטיב</mat-label>
@@ -46,6 +48,15 @@
                                                     לא
                                                 </mat-option>
                                             </mat-select>
+                                        </mat-form-field>
+                                    </div>
+                                </div> -->
+                                <div class="col-4">
+                                    <div class="form-group lh-37">
+                                        <mat-form-field>
+                                            <mat-label>מספר טלפון</mat-label>
+                                            <input type="tel" matInput autocomplete="off" placeholder="מספר טלפון"
+                                                formControlName="PhoneNumber" />
                                         </mat-form-field>
                                     </div>
                                 </div>
@@ -83,7 +94,7 @@
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-4">
+                                <!-- <div class="col-4">
                                     <div class="form-group lh-37">
                                         <mat-form-field>
                                             <mat-label>מספר טלפון</mat-label>
@@ -91,7 +102,7 @@
                                                 formControlName="PhoneNumber" />
                                         </mat-form-field>
                                     </div>
-                                </div>
+                                </div> -->
                                 <div class="col-4">
                                     <div class="form-group lh-37">
                                         <mat-form-field>
@@ -112,7 +123,7 @@
                                 </div>
                             </div>
                             <button matTooltip="חיפוש" mat-raised-button type="submit"
-                                class="btn btn-primary btn-raised" (click)="GetEmployeesToUpdate()">
+                                class="btn btn-primary btn-raised" (click)="GetEmployeesToUpdate(managerType)">
                                 <span class="material-icons">
                                     search
                                 </span>
@@ -177,11 +188,11 @@
                 <td mat-cell *matCellDef="let element" style="justify-content: center;"> {{element.CellNumber}}</td>
             </ng-container>
 
-            <ng-container matColumnDef="Elective">
+            <!-- <ng-container matColumnDef="Elective">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> אלקטיב
                     לפניה </th>
                 <td mat-cell *matCellDef="let element" style="justify-content: center;"> Elective </td>
-            </ng-container>
+            </ng-container> -->
 
             <ng-container matColumnDef="Email">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> מייל
